fix play button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,8 @@ h2 {
   font-size: 50px;
   color: red;
   background-color: transparent;
-  margin-left: 285px;
-  margin-top: -200px;
+  margin-left: 480px;
+  margin-top: 150px;
 }
 
 .betBox, p{
